--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "@babel/preset-env": "^7.19.4",
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2"
+  },
+  "dependencies": {
+    "canvas-confetti": "^1.5.1"
   }
 }
